# BSAudioLink-Quest

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1  mod.template.json  qpm.json  qpm.shared.json
.github/workflows/: build-ndk.yml  publish.yml
assets/: Bundle
include/: AssetBundleManager.hpp  AudioLink.hpp  ConfigProperties.hpp  ShaderProperties.hpp  assets.hpp  config.hpp  logging.hpp  private_field.hpp
include/Providers/: GameProvider.hpp  MenuProvider.hpp
scripts/: copy.ps1
shared/: _config.h
src/: AssetBundleManager.cpp  AudioLink.cpp  config.cpp  main.cpp
src/Providers/: GameProvider.cpp  MenuProvider.cpp
